[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-limiter>=3.12",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.3",
    "youtube-search-python>=1.6.6",
    "yt-dlp>=2025.8.11",
    "httpx>=0.28.1",
    "trafilatura>=2.0.0",
    "telegram>=0.0.1",
    "werkzeug>=3.1.3",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "pymongo>=4.14.0",
    "motor>=3.7.1",
]
